# InventoryApp

./: .gitignore  README.md  analysis_options.yaml  codemagic.yaml  design.md  implementation_roadmap.md  pubspec.yaml
.github/workflows/: ios-app-store-submit.yml  ios-app-store.yml  ios-validation.yml
android/: gradle.properties
android/app/: CMakeLists.txt  build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/app/src/main/kotlin/com/example/inventoryapp/: MainActivity.kt
android/gradle/wrapper/: gradle-wrapper.properties
cpp/: CMakeLists.txt
cpp/include/: inventory_api.h  item.h
cpp/src/: inventory_api.cpp
cpp/tests/: inventory_tests.cpp
docs/: app-store-from-windows.md  cloud-architecture-plan.md  codemagic-setup-checklist.md  github-actions-app-store.md  supabase-schema.sql
ios/: InventoryLib.podspec
ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
lib/: main.dart
lib/models/: auth_session.dart  custom_list_model.dart  item.dart
lib/providers/: auth_provider.dart  custom_lists_provider.dart  inventory_provider.dart
lib/repositories/: custom_lists_repository.dart  database_custom_lists_repository.dart  database_inventory_repository.dart  inventory_repository.dart  supabase_custom_lists_repository.dart  supabase_inventory_repository.dart
lib/screens/: custom_list_detail_screen.dart  custom_lists_screen.dart  edit_item_screen.dart  home_screen.dart  item_detail_screen.dart  scanner_screen.dart  sign_in_screen.dart
lib/services/: auth_service.dart  database_service.dart  inventory_ffi_service.dart  local_auth_service.dart  native_contract.dart  scanner_camera_service.dart  supabase_auth_service.dart
lib/widgets/: confirm_delete_dialog.dart  empty_state.dart  item_card.dart  sort_bottom_sheet.dart
test/: inventory_test.dart  native_contract_test.dart
test/acceptance/: inventory_acceptance_test.dart
test/integration/: custom_lists_provider_integration_test.dart  custom_lists_provider_supabase_integration_test.dart  inventory_provider_integration_test.dart  inventory_provider_supabase_integration_test.dart
test/providers/: auth_provider_startup_test.dart
test/repositories/: supabase_inventory_repository_test.dart  supabase_schema_contract_test.dart
test/system/: custom_lists_screen_system_test.dart
test/test_support/: fakes.dart
tests/: TEST_PLAN.md
tests/specs/: acceptance_criteria.feature  integration_workflows.md  memory_and_resource_checks.md  system_e2e.md  unit_cpp_and_dart.md
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt
